--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background: #0f0c29 url('https://example.com/space-bg.jpg') no-repeat center center;
+            background-image: url('https://github.com/Blagov13/telegram-space-game/blob/main/ChatGPT%20Image%201%20апр.%202025%20г.,%2017_11_17.png?raw=true');
             background-size: cover;
-            color: white;
-            text-align: center;
-            padding: 20px;
+            background-position: center;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
         }
         button {
             background: linear-gradient(90deg, #4a00e0, #8e2de2);
