--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <title>CosmoRise</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CosmoRise</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
+        /* Общий стиль страницы */
         body {
             background-image: url('https://github.com/Blagov13/telegram-space-game/blob/main/ChatGPT%20Image%201%20апр.%202025%20г.,%2017_11_17.png?raw=true');
             background-size: cover;
@@ -13,23 +14,82 @@
             margin: 0;
             padding: 0;
             height: 100vh;
+            font-family: 'Arial', sans-serif;
+            color: white;
         }
+
+        /* Контейнер для статистики */
+        #stats {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 15px;
+            width: 80%;
+            margin: 20px auto;
+            text-align: center;
+            font-size: 18px;
+        }
+
+        h1 {
+            font-size: 28px;
+            margin-bottom: 15px;
+        }
+
+        p {
+            margin: 10px 0;
+        }
+
+        /* Кнопки */
         button {
             background: linear-gradient(90deg, #4a00e0, #8e2de2);
             color: white;
             border: none;
-            padding: 12px 24px;
-            margin: 10px;
-            border-radius: 8px;
-            font-size: 16px;
+            padding: 15px 30px;
+            margin: 10px 0;
+            border-radius: 10px;
+            font-size: 18px;
             cursor: pointer;
+            width: 100%;
+            transition: background 0.3s ease;
         }
-        #stats {
-            background: rgba(0,0,0,0.7);
-            padding: 20px;
-            border-radius: 15px;
-            margin-bottom: 20px;
+
+        button:hover {
+            background: linear-gradient(90deg, #8e2de2, #4a00e0);
         }
+
+        button:active {
+            transform: scale(0.98);
+        }
+
+        /* Стиль для вывода информации */
+        .stats-item {
+            font-size: 20px;
+            font-weight: bold;
+            color: #ffe600;
+        }
+
+        /* Отступы для кнопок */
+        .button-container {
+            max-width: 400px;
+            margin: 0 auto;
+        }
+
+        /* Обновление кнопок и статистики */
+        .action-buttons {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        /* Плавные эффекты для элементов */
+        .action-buttons button {
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+
+        .action-buttons button:hover {
+            transform: translateY(-5px);
+            box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
+        }
+
     </style>
 </head>
 <body>
@@ -40,10 +100,14 @@
         <p>📈 Уровень: <span id="level">1</span></p>
     </div>
 
-    <button onclick="mineEnergy()">Добыть энергию</button>
-    <button onclick="buyUpgrade()">Улучшить добычу (<span id="upgradeCost">50</span> ⚡)</button>
-    <button onclick="travelToNewPlanet()">Открыть новую планету (<span id="newPlanetCost">200</span> ⚡)</button>
-    <button onclick="saveAndExit()">💾 Сохранить и выйти</button>
+    <div class="button-container">
+        <div class="action-buttons">
+            <button onclick="mineEnergy()">Добыть энергию</button>
+            <button onclick="buyUpgrade()">Улучшить добычу (<span id="upgradeCost">50</span> ⚡)</button>
+            <button onclick="travelToNewPlanet()">Открыть новую планету (<span id="newPlanetCost">200</span> ⚡)</button>
+            <button onclick="saveAndExit()">💾 Сохранить и выйти</button>
+        </div>
+    </div>
 
     <script>
         let energy = 100;
