--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CosmoRise</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script> <!-- Подключаем Font Awesome -->
     <style>
-        /* Общий стиль страницы */
         body {
             background-image: url('https://github.com/Blagov13/telegram-space-game/blob/main/ChatGPT%20Image%201%20апр.%202025%20г.,%2017_11_17.png?raw=true');
             background-size: cover;
@@ -18,7 +18,6 @@
             color: white;
         }
 
-        /* Контейнер для статистики */
         #stats {
             background: rgba(0, 0, 0, 0.7);
             padding: 20px;
@@ -38,7 +37,11 @@
             margin: 10px 0;
         }
 
-        /* Кнопки */
+        .icon {
+            font-size: 20px;
+            margin-right: 8px;
+        }
+
         button {
             background: linear-gradient(90deg, #4a00e0, #8e2de2);
             color: white;
@@ -50,6 +53,9 @@
             cursor: pointer;
             width: 100%;
             transition: background 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         button:hover {
@@ -60,27 +66,22 @@
             transform: scale(0.98);
         }
 
-        /* Стиль для вывода информации */
-        .stats-item {
-            font-size: 20px;
-            font-weight: bold;
-            color: #ffe600;
+        .button-text {
+            flex-grow: 1;
+            text-align: left;
         }
 
-        /* Отступы для кнопок */
         .button-container {
             max-width: 400px;
             margin: 0 auto;
         }
 
-        /* Обновление кнопок и статистики */
         .action-buttons {
             display: flex;
             flex-direction: column;
             gap: 10px;
         }
 
-        /* Плавные эффекты для элементов */
         .action-buttons button {
             transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
@@ -89,7 +90,6 @@
             transform: translateY(-5px);
             box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
         }
-
     </style>
 </head>
 <body>
@@ -102,10 +102,22 @@
 
     <div class="button-container">
         <div class="action-buttons">
-            <button onclick="mineEnergy()">Добыть энергию</button>
-            <button onclick="buyUpgrade()">Улучшить добычу (<span id="upgradeCost">50</span> ⚡)</button>
-            <button onclick="travelToNewPlanet()">Открыть новую планету (<span id="newPlanetCost">200</span> ⚡)</button>
-            <button onclick="saveAndExit()">💾 Сохранить и выйти</button>
+            <button onclick="mineEnergy()">
+                <i class="fas fa-bolt icon"></i>
+                <span class="button-text">Добыть энергию</span>
+            </button>
+            <button onclick="buyUpgrade()">
+                <i class="fas fa-cogs icon"></i>
+                <span class="button-text">Улучшить добычу (<span id="upgradeCost">50</span> ⚡)</span>
+            </button>
+            <button onclick="travelToNewPlanet()">
+                <i class="fas fa-rocket icon"></i>
+                <span class="button-text">Открыть новую планету (<span id="newPlanetCost">200</span> ⚡)</span>
+            </button>
+            <button onclick="saveAndExit()">
+                <i class="fas fa-save icon"></i>
+                <span class="button-text">💾 Сохранить и выйти</span>
+            </button>
         </div>
     </div>
 
@@ -188,4 +200,5 @@
     </script>
 </body>
 </html>
+
 
