--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             height: 100vh;
             font-family: 'Arial', sans-serif;
             color: white;
+            overflow: hidden; /* Запрещаем прокрутку страницы */
         }
 
         #stats {
@@ -26,6 +27,7 @@
             margin: 20px auto;
             text-align: center;
             font-size: 18px;
+            animation: fadeIn 1s ease-in-out; /* Анимация появления */
         }
 
         h1 {
@@ -52,7 +54,7 @@
             font-size: 18px;
             cursor: pointer;
             width: 100%;
-            transition: background 0.3s ease;
+            transition: background 0.3s ease, transform 0.3s ease;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -60,6 +62,7 @@
 
         button:hover {
             background: linear-gradient(90deg, #8e2de2, #4a00e0);
+            transform: scale(1.05); /* Легкое увеличение при наведении */
         }
 
         button:active {
@@ -90,6 +93,29 @@
             transform: translateY(-5px);
             box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
         }
+
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+
+        /* Анимация для кнопок */
+        .animate-button {
+            animation: bounce 1s ease infinite;
+        }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-10px);
+            }
+            60% {
+                transform: translateY(-5px);
+            }
+        }
+
     </style>
 </head>
 <body>
@@ -102,19 +128,19 @@
 
     <div class="button-container">
         <div class="action-buttons">
-            <button onclick="mineEnergy()">
+            <button class="animate-button" onclick="mineEnergy()">
                 <i class="fas fa-bolt icon"></i>
                 <span class="button-text">Добыть энергию</span>
             </button>
-            <button onclick="buyUpgrade()">
+            <button class="animate-button" onclick="buyUpgrade()">
                 <i class="fas fa-cogs icon"></i>
                 <span class="button-text">Улучшить добычу (<span id="upgradeCost">50</span> ⚡)</span>
             </button>
-            <button onclick="travelToNewPlanet()">
+            <button class="animate-button" onclick="travelToNewPlanet()">
                 <i class="fas fa-rocket icon"></i>
                 <span class="button-text">Открыть новую планету (<span id="newPlanetCost">200</span> ⚡)</span>
             </button>
-            <button onclick="saveAndExit()">
+            <button class="animate-button" onclick="saveAndExit()">
                 <i class="fas fa-save icon"></i>
                 <span class="button-text">💾 Сохранить и выйти</span>
             </button>
@@ -200,5 +226,4 @@
     </script>
 </body>
 </html>
-
 
